--- a/css/style.css
+++ b/css/style.css
@@ -10,15 +10,19 @@
 	box-sizing: border-box;
 }
 
+html {
+	font-size: 62.5%;
+}
+
 body {
 	font-family: "Lato", sans-serif;
 	line-height: 1.7;
 	color: #777;
-	padding: 30px;
+	padding: 3rem;
 }
 
 .header {
-	height: calc(100vh - 60px);
+	height: calc(100vh - 6rem);
 	background-image: linear-gradient(
 			to right bottom,
 			rgba(126, 213, 111, 0.8),
@@ -27,6 +31,42 @@ body {
 		url(../img/hero.jpg);
 	background-size: cover;
 	background-position: top;
+	position: relative;
 
 	clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
+}
+
+.logo-box {
+	position: absolute;
+	top: 4rem;
+	left: 4rem;
+}
+
+.logo {
+	height: 3.5rem;
+}
+
+.text-box {
+	position: absolute;
+	top: 40%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.heading-primary {
+	color: #fff;
+	text-transform: uppercase;
+}
+
+.heading-primary-main {
+	display: block;
+	font-size: 6rem;
+	letter-spacing: 3.5rem;
+}
+
+.heading-primary-sub {
+	display: block;
+	font-size: 2rem;
+	font-weight: 700;
+	letter-spacing: 1.74rem;
 }
