--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ body {
 	top: 40%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	text-align: center;
 }
 
 .heading-primary {
@@ -63,9 +64,7 @@ body {
 	font-size: 6rem;
 	letter-spacing: 3.5rem;
 
-	animation-name: moveInLeft;
-	animation-duration: 0.7s;
-	animation-timing-function: ease-out;
+	animation: moveInLeft 0.7s ease-out;
 }
 
 .heading-primary-sub {
@@ -73,10 +72,67 @@ body {
 	font-size: 2rem;
 	font-weight: 700;
 	letter-spacing: 1.74rem;
+	margin-bottom: 6rem;
+	margin-left: -1rem;
 
-	animation-name: moveInRight;
-	animation-duration: 0.7s;
-	animation-timing-function: ease-out;
+	animation: moveInRight 0.7s ease-out;
+}
+
+.btn:link,
+.btn:visited {
+	position: relative;
+	text-transform: uppercase;
+	text-decoration: none;
+	padding: 1.5rem 4rem;
+	display: inline-block;
+	font-size: 1.6rem;
+	border-radius: 100px;
+
+	transition: all 0.2s ease-out;
+}
+
+.btn:hover {
+	transform: translateY(-3px);
+	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.btn:active {
+	transform: translateY(-1px);
+	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.btn::after {
+	content: "";
+	display: inline-block;
+	height: 100%;
+	width: 100%;
+	border-radius: 100px;
+
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: -1;
+
+	transition: all 0.3s ease-in-out;
+}
+
+.btn-white {
+	background-color: #fff;
+	color: #777;
+}
+
+.btn-white::after {
+	background-color: #fff;
+}
+
+.btn:hover::after {
+	transform: scaleX(1.4) scaleY(1.8);
+	opacity: 0;
+}
+
+.btn-animated {
+	animation: moveInBottom 0.5s ease-out 0.7s;
+	animation-fill-mode: backwards;
 }
 
 @keyframes moveInLeft {
@@ -108,5 +164,17 @@ body {
 	100% {
 		opacity: 1;
 		transform: translateX(0);
+	}
+}
+
+@keyframes moveInBottom {
+	0% {
+		opacity: 0;
+		transform: translateY(30px);
+	}
+
+	100% {
+		opacity: 1;
+		transform: translateY(0);
 	}
 }
