--- a/css/style.css
+++ b/css/style.css
@@ -36,17 +36,17 @@ body {
 	clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
 }
 
-.logo-box {
+.header__logo-box {
 	position: absolute;
 	top: 4rem;
 	left: 4rem;
 }
 
-.logo {
+.header__logo {
 	height: 3.5rem;
 }
 
-.text-box {
+.header__text-box {
 	position: absolute;
 	top: 40%;
 	left: 50%;
@@ -59,7 +59,7 @@ body {
 	text-transform: uppercase;
 }
 
-.heading-primary-main {
+.heading-primary--main {
 	display: block;
 	font-size: 6rem;
 	letter-spacing: 3.5rem;
@@ -67,13 +67,13 @@ body {
 	animation: moveInLeft 0.7s ease-out;
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
 	display: block;
 	font-size: 2rem;
 	font-weight: 700;
 	letter-spacing: 1.74rem;
 	margin-bottom: 6rem;
-	margin-left: -1rem;
+	margin-left: -1.5rem;
 
 	animation: moveInRight 0.7s ease-out;
 }
@@ -116,12 +116,12 @@ body {
 	transition: all 0.3s ease-in-out;
 }
 
-.btn-white {
+.btn--white {
 	background-color: #fff;
 	color: #777;
 }
 
-.btn-white::after {
+.btn--white::after {
 	background-color: #fff;
 }
 
@@ -130,7 +130,7 @@ body {
 	opacity: 0;
 }
 
-.btn-animated {
+.btn--animated {
 	animation: moveInBottom 0.5s ease-out 0.7s;
 	animation-fill-mode: backwards;
 }
