--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,10 +1,11 @@
-@use "../abstracts";
+@use "../abstracts" as *;
+
 .header {
 	height: calc(100vh - 6rem);
 	background-image: linear-gradient(
 			to right bottom,
-			rgba(abstracts.$color-primary-light, 0.8),
-			rgba(abstracts.$color-primary-dark, 0.8)
+			rgba($color-primary-light, 0.8),
+			rgba($color-primary-dark, 0.8)
 		),
 		url(../img/hero.jpg);
 	background-size: cover;
