--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -14,7 +14,7 @@ body {
 
 	&--main {
 		display: block;
-		font-size: 6rem;
+		font-size: 6.2rem;
 		letter-spacing: 3.5rem;
 
 		animation: moveInLeft 0.7s ease-out;
@@ -25,9 +25,47 @@ body {
 		font-size: 2rem;
 		font-weight: 700;
 		letter-spacing: 1.74rem;
-		margin-bottom: 6rem;
+		margin-bottom: 6.4rem;
 		margin-left: -1.5rem;
 
 		animation: moveInRight 0.7s ease-out;
+	}
+}
+
+.heading-secondary {
+	display: inline-block;
+	font-size: 3.6rem;
+	text-transform: uppercase;
+	font-weight: 700;
+	letter-spacing: 2px;
+
+	background-image: linear-gradient(
+		to right,
+		$color-primary-light,
+		$color-primary-dark
+	);
+	background-clip: text;
+	color: transparent;
+
+	transition: all 0.2s ease-in-out;
+
+	&:hover {
+		transform: skewY(-2deg) skewX(15deg) scale(1.1);
+		text-shadow: 0.5rem 1rem 20px rgba($color-black, 0.2);
+	}
+}
+
+.heading-tertiary {
+	font-size: 1.8rem;
+	font-weight: 700;
+	text-transform: uppercase;
+}
+
+.paragraph {
+	font-size: $default-font-size;
+	margin-bottom: 3.2rem;
+
+	&:last-child {
+		margin-bottom: 0;
 	}
 }
