--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -6,9 +6,9 @@
 		position: relative;
 		text-transform: uppercase;
 		text-decoration: none;
-		padding: 1.5rem 4rem;
+		padding: 1.6rem 4.8rem;
 		display: inline-block;
-		font-size: 1.6rem;
+		font-size: $default-font-size;
 		border-radius: 100px;
 
 		transition: all 0.2s ease-out;
@@ -55,5 +55,31 @@
 	&--animated {
 		animation: moveInBottom 0.5s ease-out 0.7s;
 		animation-fill-mode: backwards;
+	}
+}
+
+.btn-text {
+	transition: all 0.3s ease;
+
+	&:link,
+	&:visited {
+		display: inline-block;
+		font-size: $default-font-size;
+		color: $color-primary;
+		text-decoration: none;
+		border-bottom: 1px solid $color-primary;
+		padding: 3px;
+	}
+
+	&:hover {
+		background-color: $color-primary;
+		color: $color-white;
+		box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
+		transform: translateY(-2px);
+	}
+
+	&:active {
+		box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
+		transform: translateY(0);
 	}
 }
