--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,7 +1,7 @@
 @use "../abstracts" as *;
 
 .header {
-	height: calc(100vh - 6rem);
+	height: 95vh;
 	background-image: linear-gradient(
 			to right bottom,
 			rgba($color-primary-light, 0.8),
@@ -12,7 +12,7 @@
 	background-position: top;
 	position: relative;
 
-	clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
+	clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 
 	&__logo-box {
 		position: absolute;
