--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,3 +1,5 @@
+@use "../abstracts" as *;
+
 * {
 	margin: 0;
 	padding: 0;
@@ -10,4 +12,34 @@ html {
 
 body {
 	box-sizing: border-box;
+}
+
+#preloader {
+	background-color: #000;
+	height: 95vh;
+	width: calc(100vw - 6rem);
+	position: fixed;
+	z-index: 100;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+#spinner {
+	border: 16px solid $color-grey-light-1;
+	border-top: 16px solid $color-primary;
+	border-radius: 50%;
+	width: 12rem;
+	height: 12rem;
+	animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
 }
